--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -107,6 +107,11 @@ Pos=1263,10
 Size=607,723
 Collapsed=0
 
+[Window][PlayerBody]
+Pos=60,60
+Size=152,834
+Collapsed=0
+
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
