--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -181,6 +181,12 @@
     <Filter Include="nlohmann">
       <UniqueIdentifier>{90d0df66-bf66-4133-a379-d1d84e3ef1a6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Application\Source\Body">
+      <UniqueIdentifier>{c0f14d49-89be-4d22-a1e7-6e5854de34aa}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Application\Header\Body">
+      <UniqueIdentifier>{04339e44-f388-4e66-9c70-2483adb6e65a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NewEngine\Render\Buffer\IndexBuffer.cpp">
@@ -426,9 +432,6 @@
     <ClCompile Include="Application\SourceCode\MalletMotion.cpp">
       <Filter>Application\Source\Motion\Weapon</Filter>
     </ClCompile>
-    <ClCompile Include="Application\SourceCode\HumanoidBody.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
     <ClCompile Include="Application\SourceCode\MoveMotion.cpp">
       <Filter>Application\Source\Motion\Human</Filter>
     </ClCompile>
@@ -457,7 +460,13 @@
       <Filter>Uncategorized\Source</Filter>
     </ClCompile>
     <ClCompile Include="Application\SourceCode\Scene\PlayerBody.cpp">
-      <Filter>Uncategorized\Source</Filter>
+      <Filter>Application\Source\Body</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\HumanoidBody.cpp">
+      <Filter>Application\Source\Body</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\BossBody.cpp">
+      <Filter>Application\Source\Body</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -749,9 +758,6 @@
     <ClInclude Include="Application\SourceCode\RollMotion.h">
       <Filter>Application\Header\Motion\Human</Filter>
     </ClInclude>
-    <ClInclude Include="Application\SourceCode\HumanoidBody.h">
-      <Filter>Uncategorized\Header</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\1.School\3.3年前期\TL1\CG5_Task01\Project\External\nlohmann\json.hpp">
       <Filter>nlohmann</Filter>
     </ClInclude>
@@ -770,8 +776,14 @@
     <ClInclude Include="Application\SourceCode\MessegeSign.h">
       <Filter>Uncategorized\Header</Filter>
     </ClInclude>
+    <ClInclude Include="Application\SourceCode\HumanoidBody.h">
+      <Filter>Application\Header\Body</Filter>
+    </ClInclude>
     <ClInclude Include="Application\SourceCode\PlayerBody.h">
-      <Filter>Uncategorized\Header</Filter>
+      <Filter>Application\Header\Body</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\BossBody.h">
+      <Filter>Application\Header\Body</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
