--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -117,12 +117,14 @@
     <ClCompile Include="Application\SourceCode\CameraManager.cpp" />
     <ClCompile Include="Application\SourceCode\Club.cpp" />
     <ClCompile Include="Application\SourceCode\CollisionManager.cpp" />
+    <ClCompile Include="Application\SourceCode\DefaultCamera.cpp" />
     <ClCompile Include="Application\SourceCode\DOF.cpp" />
     <ClCompile Include="Application\SourceCode\GaugeParam.cpp" />
     <ClCompile Include="Application\SourceCode\GaugeUI.cpp" />
     <ClCompile Include="Application\SourceCode\GaussianBlur.cpp" />
     <ClCompile Include="Application\SourceCode\Glare.cpp" />
     <ClCompile Include="Application\SourceCode\HumanoidBody.cpp" />
+    <ClCompile Include="Application\SourceCode\ICamera.cpp" />
     <ClCompile Include="Application\SourceCode\IMotion.cpp" />
     <ClCompile Include="Application\SourceCode\IWeaponMotion.cpp" />
     <ClCompile Include="Application\SourceCode\MenuManager.cpp" />
@@ -216,6 +218,7 @@
     <ClInclude Include="Application\SourceCode\CameraManager.h" />
     <ClInclude Include="Application\SourceCode\Club.h" />
     <ClInclude Include="Application\SourceCode\CollisionManager.h" />
+    <ClInclude Include="Application\SourceCode\DefaultCamera.h" />
     <ClInclude Include="Application\SourceCode\DOF.h" />
     <ClInclude Include="Application\SourceCode\GaugeParam.h" />
     <ClInclude Include="Application\SourceCode\GaugeType.h" />
@@ -223,6 +226,7 @@
     <ClInclude Include="Application\SourceCode\GaussianBlur.h" />
     <ClInclude Include="Application\SourceCode\Glare.h" />
     <ClInclude Include="Application\SourceCode\HumanoidBody.h" />
+    <ClInclude Include="Application\SourceCode\ICamera.h" />
     <ClInclude Include="Application\SourceCode\IMotion.h" />
     <ClInclude Include="Application\SourceCode\IWeaponMotion.h" />
     <ClInclude Include="Application\SourceCode\MenuManager.h" />
