--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -103,13 +103,18 @@ Collapsed=0
 DockId=0x0000000D,0
 
 [Window][HumanoidBody]
-Pos=1329,66
+Pos=1324,101
 Size=358,732
 Collapsed=0
 
 [Window][PlayerBody]
 Pos=60,60
 Size=152,834
+Collapsed=0
+
+[Window][Lighting]
+Pos=342,243
+Size=624,203
 Collapsed=0
 
 [Docking][Data]
