--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="Application\SourceCode\CollisionManager.cpp" />
     <ClCompile Include="Application\SourceCode\DefaultCamera.cpp" />
     <ClCompile Include="Application\SourceCode\DOF.cpp" />
+    <ClCompile Include="Application\SourceCode\Field.cpp" />
     <ClCompile Include="Application\SourceCode\GaugeParam.cpp" />
     <ClCompile Include="Application\SourceCode\GaugeUI.cpp" />
     <ClCompile Include="Application\SourceCode\GaussianBlur.cpp" />
@@ -143,6 +144,7 @@
     <ClCompile Include="Application\SourceCode\Scene\TestScene.cpp" />
     <ClCompile Include="Application\SourceCode\Scene\TitleScene.cpp" />
     <ClCompile Include="Application\SourceCode\MessegeSign.cpp" />
+    <ClCompile Include="Application\SourceCode\TargetCamera.cpp" />
     <ClCompile Include="Application\SourceCode\Task.cpp" />
     <ClCompile Include="Application\SourceCode\TitleUI.cpp" />
     <ClCompile Include="Application\SourceCode\UIManager.cpp" />
@@ -220,6 +222,7 @@
     <ClInclude Include="Application\SourceCode\CollisionManager.h" />
     <ClInclude Include="Application\SourceCode\DefaultCamera.h" />
     <ClInclude Include="Application\SourceCode\DOF.h" />
+    <ClInclude Include="Application\SourceCode\Field.h" />
     <ClInclude Include="Application\SourceCode\GaugeParam.h" />
     <ClInclude Include="Application\SourceCode\GaugeType.h" />
     <ClInclude Include="Application\SourceCode\GaugeUI.h" />
@@ -246,6 +249,7 @@
     <ClInclude Include="Application\SourceCode\Scene\TestScene.h" />
     <ClInclude Include="Application\SourceCode\Scene\TitleScene.h" />
     <ClInclude Include="Application\SourceCode\MessegeSign.h" />
+    <ClInclude Include="Application\SourceCode\TargetCamera.h" />
     <ClInclude Include="Application\SourceCode\Task.h" />
     <ClInclude Include="Application\SourceCode\TitleUI.h" />
     <ClInclude Include="Application\SourceCode\UIManager.h" />
