--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -143,7 +143,7 @@
     <ClCompile Include="Application\SourceCode\Scene\SceneManager.cpp" />
     <ClCompile Include="Application\SourceCode\Scene\TestScene.cpp" />
     <ClCompile Include="Application\SourceCode\Scene\TitleScene.cpp" />
-    <ClCompile Include="Application\SourceCode\MessegeSign.cpp" />
+    <ClCompile Include="Application\SourceCode\MessageSign.cpp" />
     <ClCompile Include="Application\SourceCode\TargetCamera.cpp" />
     <ClCompile Include="Application\SourceCode\Task.cpp" />
     <ClCompile Include="Application\SourceCode\TitleUI.cpp" />
@@ -248,7 +248,7 @@
     <ClInclude Include="Application\SourceCode\Scene\SceneManager.h" />
     <ClInclude Include="Application\SourceCode\Scene\TestScene.h" />
     <ClInclude Include="Application\SourceCode\Scene\TitleScene.h" />
-    <ClInclude Include="Application\SourceCode\MessegeSign.h" />
+    <ClInclude Include="Application\SourceCode\MessageSign.h" />
     <ClInclude Include="Application\SourceCode\TargetCamera.h" />
     <ClInclude Include="Application\SourceCode\Task.h" />
     <ClInclude Include="Application\SourceCode\TitleUI.h" />
