--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -489,7 +489,7 @@
     <ClCompile Include="Application\SourceCode\Field.cpp">
       <Filter>Application\Source\Field</Filter>
     </ClCompile>
-    <ClCompile Include="Application\SourceCode\MessegeSign.cpp">
+    <ClCompile Include="Application\SourceCode\MessageSign.cpp">
       <Filter>Application\Source\Field</Filter>
     </ClCompile>
   </ItemGroup>
@@ -818,7 +818,7 @@
     <ClInclude Include="Application\SourceCode\Field.h">
       <Filter>Application\Header\Field</Filter>
     </ClInclude>
-    <ClInclude Include="Application\SourceCode\MessegeSign.h">
+    <ClInclude Include="Application\SourceCode\MessageSign.h">
       <Filter>Application\Header\Field</Filter>
     </ClInclude>
   </ItemGroup>
